kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-http-service
  name: simple-http-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: simple-http
  type: ClusterIP
