kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: simple-http.apps.ocp.az.alusta.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-http-service
                port:
                  number: 8080
